Closed Bug 595938 Opened 14 years ago Closed 14 years ago

[OpenGL] Garbage/overdrawing when using -moz-transition

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: joe, Assigned: mattwoodrow)

References

Details

Attachments

(1 file)

On OS X with accelerated layers, we get garbage or overpainting when we're using -moz-transition. You can easily see this on tinderboxpushlog (tbpl) when hovering over a long commit message, or when you hover over a tab.
blocking2.0: --- → betaN+
Attachment #474854 - Flags: review?(vladimir)
Assignee: joe → matt.woodrow+bugzilla
Blocks: 586464
http://hg.mozilla.org/mozilla-central/rev/52fb39beeb8a
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: