Bug 595938 - Garbage/overdrawing when using -moz-transform: Fix the clip rect before clearing the FBO. r=vlad a=b